:sparkles: Factory create API endpoint
